# personal-analyzer

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/default_data/: language_objects.sql
alembic/versions/: 855c2f2d3430_init.py  969e80e241a8_init.py  96ef94b38be8_init.py
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  log.py  utils.py
app/crud/: __init__.py  base.py  channel.py  language.py  user.py
app/db/: __init__.py  base.py  session.py  utils.py
app/db/models/: channels.py  language_obj.py  users.py
app/static/: language_objects.sql
app/tg/: __init__.py  handlers_map.py  handlers_member.py  massage_obj.py  utils.py
app/tg/handlers/: chat_members.py  commands.py  menu.py  others.py
app/tg/messages/: base.py  chat_members.py  menu.py  others.py
tests/: conftest.py  test_chat_members.py  test_other.py
tests/fixtures/: base.py  db.py  tg.py
